--- a/src/output.css
+++ b/src/output.css
@@ -523,6 +523,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 50;
 }
 
+.m-auto {
+  margin: auto;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -532,12 +536,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0.5rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .block {
@@ -576,6 +584,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 2.5rem;
 }
 
+.h-\[10vh\] {
+  height: 10vh;
+}
+
 .h-16 {
   height: 4rem;
 }
@@ -594,6 +606,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-\[52px\] {
   height: 52px;
+}
+
+.h-\[15vh\] {
+  height: 15vh;
+}
+
+.h-\[30vh\] {
+  height: 30vh;
 }
 
 .max-h-\[95vh\] {
@@ -658,6 +678,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-\[80vw\] {
   width: 80vw;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
+.w-\[370px\] {
+  width: 370px;
+}
+
+.w-2\.5 {
+  width: 0.625rem;
+}
+
+.w-2 {
+  width: 0.5rem;
 }
 
 .min-w-\[64px\] {
@@ -821,6 +857,33 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-width: 1px;
 }
 
+.border-b-0 {
+  border-bottom-width: 0px;
+}
+
+.border-stone-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(87 83 78 / var(--tw-border-opacity));
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-stone-600\/50 {
+  border-color: rgb(87 83 78 / 0.5);
+}
+
+.border-stone-600\/40 {
+  border-color: rgb(87 83 78 / 0.4);
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .bg-white\/90 {
   background-color: rgb(255 255 255 / 0.9);
 }
@@ -953,9 +1016,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 11.5px;
 }
 
-.py-\[2px\] {
-  padding-top: 2px;
-  padding-bottom: 2px;
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 
 .px-1 {
@@ -963,9 +1026,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 0.25rem;
 }
 
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.py-\[2px\] {
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .py-8 {
@@ -983,14 +1056,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1.6rem;
 }
 
-.py-0\.5 {
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .pb-3 {
@@ -1023,6 +1101,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pb-7 {
   padding-bottom: 1.75rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
 }
 
 .text-center {
@@ -1133,6 +1227,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(255 255 255 / 0.8);
 }
 
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
+.text-stone-600\/50 {
+  color: rgb(87 83 78 / 0.5);
+}
+
 .text-opacity-75 {
   --tw-text-opacity: 0.75;
 }
@@ -1224,12 +1327,11 @@ body {
 
 .infoPage {
   background-image: url("./assets/images/info.JPG");
-  height: 100vh;
+  height: 90vh;
   overflow-y: scroll;
   background-color: rgb(23 23 23 / 0.5);
   background-position: center;
   background-repeat: no-repeat;
-  padding-bottom: 1rem;
   background-blend-mode: multiply;
 }
 
@@ -1336,10 +1438,6 @@ input[type="number"] {
 }
 
 @media (min-width: 768px) {
-  .md\:w-\[75\%\] {
-    width: 75%;
-  }
-
   .md\:w-\[90\%\] {
     width: 90%;
   }
@@ -1423,10 +1521,6 @@ input[type="number"] {
 
   .lg\:grid-rows-3 {
     grid-template-rows: repeat(3, minmax(0, 1fr));
-  }
-
-  .lg\:grid-rows-2 {
-    grid-template-rows: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:gap-8 {
